デプロイ確認

--- a/ index.html
+++ b/ index.html
@@ -199,7 +199,7 @@
 </section>
 
 <footer>
-      <p>&copy; 株式会社ocomoji - デプロイテスト</p>
+             <p>&copy; 株式会社ocomoji - デプロイ確認</p>
 </footer>
 </div>
 
